fixed alignments of elements in questionnaire

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ h3 {
 .choices {
   display: flex;
   width: 1200px;
+  height: 300px;
   font-family: 'Silka Light';
 }
 
@@ -151,6 +152,11 @@ h3 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.gif {
+  height: 200px;
+  margin-bottom: 100px;
 }
 
 /*  choices answers  */
@@ -221,8 +227,8 @@ h3 {
 /*  PROGRESS BAR  */
 .barContainer {
   height: 50px;
-  display: flex;
   justify-content: center;
+  padding-top: 5%;
 }
 
 .defaultBar {
